Team Member Localization Updated

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -894,7 +894,53 @@
       }
     ],
     "descriptionTitle": "الوصف",
-    "viewPortfolio": "عرض الملف الشخصي"
+    "viewPortfolio": "عرض الملف الشخصي",
+    "leadershipLabel": "القيادة",
+    "clickToLearnMore": "انقر لمعرفة المزيد",
+    "biographyLabel": "نبذة",
+    "areasOfExpertiseLabel": "مجالات الخبرة",
+    "close": "إغلاق",
+    "social": {
+      "linkedin": "لينكدإن",
+      "facebook": "فيسبوك",
+      "github": "جيت هَب"
+    },
+    "leadershipHero": {
+      "title": "قيادة مصممة لتحول قابل للقياس.",
+      "subtitle": "يجمع Birds of Eden بين خبراء ERP واستراتيجيي الذكاء الاصطناعي وقادة التنفيذ العملي لتوجيه كل شراكة."
+    },
+    "membersById": {
+      "talat": {
+        "role": "المؤسس والرئيس التنفيذي",
+        "quote": "أعمل مع العملاء لتحويل الرؤى الجريئة إلى تنفيذ منضبط، مع تركيز حاد على ERP والذكاء الاصطناعي والمرونة.",
+        "bio": "طلعت محمد توفيق إلحي هو القائد صاحب الرؤية والرئيس التنفيذي لشركة Birds of Eden، وهي شركة تقنية تركز على تقديم حلول برمجية مبتكرة. كما يترأس Adon Venture General Trading LLC، وهي مؤسسة ديناميكية ذات نطاق واسع في قطاع التجارة الدولية. وبخبرة كبيرة في استراتيجية الأعمال وتطوير البرمجيات والإدارة، لعب طلعت دورًا رئيسيًا في دفع الشركتين نحو النمو والنجاح. يركز أسلوبه القيادي على الابتكار ورضا العملاء والالتزام بالتميز.",
+        "pillars": [
+          "استراتيجية وحوكمة ERP",
+          "خارطة طريق منتجات الذكاء الاصطناعي",
+          "تحالفات الشركاء العالمية"
+        ]
+      },
+      "amenul": {
+        "role": "المدير التنفيذي للتكنولوجيا",
+        "quote": "نصمم منصات مرنة تجمع بين خلفيات نظيفة ونماذج الذكاء الاصطناعي وتطويرات عتاد بمستوى صناعي.",
+        "bio": "محمد أمين الإسلام هو قائد ديناميكي وصاحب رؤية يقود الابتكار والتحول الرقمي. وبفهم عميق للتكنولوجيا وشغف بالتغيير، ساهم في توسيع نطاق الأعمال وتقديم خدمات متقدمة وتجارب مميزة للعملاء. إن التزامه بالابتكار والرؤية الاستراتيجية والقيادة القوية يواصل دفع النجاح.",
+        "pillars": [
+          "حوكمة الخدمات المصغرة ونماذج الذكاء الاصطناعي",
+          "DevOps بأولوية الأمن",
+          "ضوابط تكامل العتاد"
+        ]
+      },
+      "anisur": {
+        "role": "مستشار أول (تطوير الأعمال)",
+        "quote": "أبني شراكات استراتيجية تحول الفرص إلى نمو طويل الأمد وأثر قابل للقياس.",
+        "bio": "يقود أنيسور تطوير الأعمال والشراكات الاستراتيجية ومبادرات التوسع في الأسواق العالمية. يركز على تحديد فرص النمو وبناء العلاقات المؤسسية ودفع استراتيجيات إيرادات مستدامة عبر المناطق.",
+        "pillars": [
+          "شراكات استراتيجية",
+          "توسع الأسواق",
+          "مفاوضات المؤسسات"
+        ]
+      }
+    }
   },
   "hardwareProducts": {
     "premiumTech": {
