--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -890,7 +890,53 @@
       }
     ],
     "descriptionTitle": "বিবরণ",
-    "viewPortfolio": "পোর্টফোলিও দেখুন"
+    "viewPortfolio": "পোর্টফোলিও দেখুন",
+    "leadershipLabel": "নেতৃত্ব",
+    "clickToLearnMore": "আরও জানতে ক্লিক করুন",
+    "biographyLabel": "জীবনী",
+    "areasOfExpertiseLabel": "দক্ষতার ক্ষেত্রসমূহ",
+    "close": "বন্ধ করুন",
+    "social": {
+      "linkedin": "লিঙ্কডইন",
+      "facebook": "ফেসবুক",
+      "github": "গিটহাব"
+    },
+    "leadershipHero": {
+      "title": "পরিমাপযোগ্য রূপান্তরের জন্য গঠিত নেতৃত্ব।",
+      "subtitle": "Birds of Eden ERP বিশেষজ্ঞ, এআই কৌশলবিদ এবং হাতে-কলমে ডেলিভারি লিডদের একত্র করে প্রতিটি অংশীদারিত্বকে পথ দেখায়।"
+    },
+    "membersById": {
+      "talat": {
+        "role": "প্রতিষ্ঠাতা ও সিইও",
+        "quote": "আমি ক্লায়েন্টদের সাথে কাজ করি যাতে সাহসী দৃষ্টিভঙ্গিকে শৃঙ্খলাবদ্ধ ডেলিভারিতে রূপ দিতে পারি—ERP, এআই এবং স্থিতিস্থাপকতায় তীক্ষ্ণ ফোকাস রেখে।",
+        "bio": "তালাত মোঃ তৌফিক এলাহী Birds of Eden সফটওয়্যার ফার্মের দূরদর্শী নেতা ও সিইও। তিনি উদ্ভাবনী সফটওয়্যার সমাধান প্রদান এবং আন্তর্জাতিক ব্যবসায়িক ক্ষেত্রেও নেতৃত্ব দিয়ে আসছেন। ব্যবসায়িক কৌশল, সফটওয়্যার উন্নয়ন এবং কর্পোরেট ব্যবস্থাপনায় তার বিস্তৃত অভিজ্ঞতা দুই প্রতিষ্ঠানকে বৃদ্ধি ও সাফল্যের পথে এগিয়ে নিয়েছে।",
+        "pillars": [
+          "ERP কৌশল ও গভর্ন্যান্স",
+          "এআই পণ্যের রোডম্যাপ",
+          "গ্লোবাল পার্টনার অ্যালায়েন্স"
+        ]
+      },
+      "amenul": {
+        "role": "চিফ টেকনোলজি অফিসার",
+        "quote": "আমরা রেজিলিয়েন্ট প্ল্যাটফর্ম তৈরি করি যেখানে ক্লিন ব্যাকএন্ড, এআই মডেল এবং ইন্ডাস্ট্রিয়াল-গ্রেড হার্ডওয়্যার আপলিফট একসাথে কাজ করে।",
+        "bio": "মোঃ আমেনুল ইসলাম একজন গতিশীল ও দূরদর্শী প্রযুক্তি নেতা। তিনি উদ্ভাবন, প্ল্যাটফর্ম ইঞ্জিনিয়ারিং এবং স্কেলেবল ডেলিভারির ওপর জোর দিয়ে ডিজিটাল ট্রান্সফরমেশন এগিয়ে নিচ্ছেন। তার কৌশলগত দৃষ্টিভঙ্গি এবং শক্ত নেতৃত্ব প্রতিষ্ঠানকে পরিবর্তনশীল পরিবেশে অভিযোজিত হতে সাহায্য করে।",
+        "pillars": [
+          "মাইক্রোসার্ভিস ও এআই মডেল গভর্ন্যান্স",
+          "সিকিউরিটি-ফার্স্ট DevOps",
+          "হার্ডওয়্যার ইন্টিগ্রেশন কন্ট্রোল"
+        ]
+      },
+      "anisur": {
+        "role": "সিনিয়র কনসালট্যান্ট (বিজনেস ডেভেলপমেন্ট)",
+        "quote": "আমি কৌশলগত অংশীদারিত্ব গড়ে তুলি যা সুযোগকে দীর্ঘমেয়াদি বৃদ্ধি এবং পরিমাপযোগ্য প্রভাবের পথে নিয়ে যায়।",
+        "bio": "আনিসুর ব্যবসা উন্নয়ন, কৌশলগত অংশীদারিত্ব এবং বৈশ্বিক বাজার সম্প্রসারণ উদ্যোগ পরিচালনা করেন। তিনি প্রবৃদ্ধির সুযোগ চিহ্নিত করা, এন্টারপ্রাইজ সম্পর্ক গড়ে তোলা এবং অঞ্চলভিত্তিক টেকসই রাজস্ব কৌশল এগিয়ে নেওয়ায় মনোযোগী।",
+        "pillars": [
+          "কৌশলগত অংশীদারিত্ব",
+          "বাজার সম্প্রসারণ",
+          "এন্টারপ্রাইজ আলোচনা"
+        ]
+      }
+    }
   },
   "hardwareProducts": {
     "premiumTech": {
