--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -909,7 +909,53 @@
       }
     ],
     "descriptionTitle": "説明",
-    "viewPortfolio": "ポートフォリオを見る"
+    "viewPortfolio": "ポートフォリオを見る",
+    "leadershipLabel": "リーダーシップ",
+    "clickToLearnMore": "クリックして詳細を見る",
+    "biographyLabel": "略歴",
+    "areasOfExpertiseLabel": "専門分野",
+    "close": "閉じる",
+    "social": {
+      "linkedin": "LinkedIn",
+      "facebook": "Facebook",
+      "github": "GitHub"
+    },
+    "leadershipHero": {
+      "title": "測定可能な変革を実現するためのリーダーシップ。",
+      "subtitle": "Birds of Eden は、ERP のベテラン、AI 戦略家、現場主導のデリバリーリーダーを結集し、あらゆる取り組みを導きます。"
+    },
+    "membersById": {
+      "talat": {
+        "role": "創業者兼CEO",
+        "quote": "私はクライアントと共に、大胆なビジョンを規律あるデリバリーへと変えます。ERP、AI、レジリエンスに鋭く集中します。",
+        "bio": "タラット・マフムードは Birds of Eden のCEOとして、革新的なソフトウェアソリューションを推進するビジョナリーリーダーです。事業戦略、ソフトウェア開発、組織運営における豊富な経験を活かし、成長と成功を牽引しています。",
+        "pillars": [
+          "ERP 戦略とガバナンス",
+          "AI 製品ロードマップ",
+          "グローバルパートナー連携"
+        ]
+      },
+      "amenul": {
+        "role": "最高技術責任者（CTO）",
+        "quote": "クリーンなバックエンド、AIモデル、産業グレードのハードウェア強化を統合した、レジリエントなプラットフォームを設計します。",
+        "bio": "アメヌル・イスラムは、プラットフォームエンジニアリングとクラウド運用、研究開発をリードし、スケーラブルなデプロイを実現します。革新と実行力を両立し、組織の成長を支えます。",
+        "pillars": [
+          "マイクロサービスとAIモデルのガバナンス",
+          "セキュリティファーストDevOps",
+          "ハードウェア統合コントロール"
+        ]
+      },
+      "anisur": {
+        "role": "シニアコンサルタント（事業開発）",
+        "quote": "機会を長期的な成長と測定可能な成果へと変える、戦略的パートナーシップを構築します。",
+        "bio": "アニスルは事業開発、戦略的提携、グローバル市場拡大を担当します。成長機会の特定、エンタープライズ関係の強化、持続的な収益戦略の推進に注力しています。",
+        "pillars": [
+          "戦略的パートナーシップ",
+          "市場拡大",
+          "エンタープライズ交渉"
+        ]
+      }
+    }
   },
   "hardwareProducts": {
     "premiumTech": {
